backend.log

> backend@1.0.0 start
> node server.js

file:///Users/felixseeger/Projects/Node-Project/lib/api/routes/luma.js:3
import { createLumaClient } from '../services/luma.js';
         ^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../services/luma.js' does not provide an export named 'createLumaClient'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:655:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v25.6.1
